[workspace]

members = [
	"dcb",
	"dcb-io",
	"dcb-util",
	"dcb-exe",
	"dcb-bytes",
	"dcb-bytes-derive",
	"dcb-iso9660",
	"dcb-cdrom-xa",
	"dcb-drv",
	"dcb-pak",
	"dcb-tim",
	"dcb-tools/dcb-uniso-bin",
	"dcb-tools/dcb-mkiso-bin",
	"dcb-tools/dcb-disasm",
	"dcb-tools/dcb-as",
	"dcb-tools/dcb-dbg",
	"dcb-tools/dcb-undrv",
	"dcb-tools/dcb-mkdrv",
	"dcb-tools/dcb-unpak",
	"dcb-tools/model-set-extractor",
	"dcb-tools/dcb-mkbin",
	"dcb-tools/dcb-unbin",
	"dcb-tools/dcb-unmsd",
	"dcb-tools/dcb-card-editor",
	"dcb-tools/dcb-file-editor",
]
