[workspace]

members = [
  "dcb",
  "dcb-io",
  "dcb-exe",
  "dcb-bytes",
  "dcb-bytes-derive",
  "dcb-iso9660",
  "dcb-cdrom-xa",
  "dcb-drv",
  "dcb-msd",
  "dcb-pak",
  "dcb-tim",
  "dcb-tools/dcb-uniso-bin",
  "dcb-tools/dcb-mkiso-bin",
  "dcb-tools/dcb-disasm",
  "dcb-tools/dcb-as",
  "dcb-tools/dcb-dbg",
  "dcb-tools/dcb-undrv",
  "dcb-tools/dcb-mkdrv",
  "dcb-tools/dcb-unpak",
  "dcb-tools/model-set-extractor",
  "dcb-tools/dcb-mkbin",
  "dcb-tools/dcb-unbin",
  "dcb-tools/dcb-unmsd",
  "dcb-tools/dcb-untmd",
  "dcb-tools/dcb-card-editor",
  "dcb-tools/dcb-deck-editor",
  "dcb-tools/dcb-file-editor",
  "dcb-tools/dcb-drv-fuse",
  "dcb-tools/dcb-extract-card-table",
]

#[patch."https://github.com/Zenithsiz/zutil"]
#zutil = {path = "../zutil"}
