[workspace]

members = [
  "dcb",
  "dcb-io",
  "dcb-exe",
  "dcb-bytes",
  "dcb-bytes-derive",
  "dcb-iso9660",
  "dcb-cdrom-xa",
  "dcb-drv",
  "dcb-msd",
  "dcb-pak",
  "dcb-tim",
  "dcb-tools/iso/dcb-uniso-bin",
  "dcb-tools/iso/dcb-mkiso-bin",
  "dcb-tools/asm/dcb-disasm",
  "dcb-tools/asm/dcb-as",
  "dcb-tools/asm/dcb-dbg",
  "dcb-tools/drv/dcb-undrv",
  "dcb-tools/drv/dcb-mkdrv",
  "dcb-tools/pak/dcb-unpak",
  "dcb-tools/tmd/model-set-extractor",
  "dcb-tools/cdrom-xa/dcb-mkbin",
  "dcb-tools/cdrom-xa/dcb-unbin",
  "dcb-tools/msd/dcb-unmsd",
  "dcb-tools/tmd/dcb-untmd",
  "dcb-tools/gui/dcb-card-editor",
  "dcb-tools/gui/dcb-deck-editor",
  "dcb-tools/gui/dcb-file-editor",
  "dcb-tools/drv/dcb-drv-fuse",
  "dcb-tools/simple/dcb-extract-card-table",
]

#[patch."https://github.com/Zenithsiz/zutil"]
#zutil = {path = "../zutil"}
