[package]
name = "dcb-bytes-derive"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dcb-bytes = { path = "../dcb-bytes" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
