[package]
name = "dcb-cdrom-xa"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-util = { path = "../dcb-util" }
dcb-bytes = { path = "../dcb-bytes" }

# Log
log = "0.4.13"
bitflags = "1.2.1"

# Util
byteorder = "1.4.2"

# Derives
thiserror = "1.0.23"
