[package]
name = "dcb-drv"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-util = { path = "../dcb-util" }

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
chrono = "0.4.19"
bit-vec = "0.6.3"
ascii = "1.0.0"

# Derives
thiserror = "1.0.23"
