[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-drv"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
zutil = {git = "https://github.com/Zenithsiz/zutil"}

# Log
log = "0.4.13"

# Util
ascii = "1.0.0"
bit-vec = "0.6.3"
byteorder = "1.4.2"
chrono = "0.4.19"
ref-cast = "1.0.6"

# Derives
thiserror = "1.0.23"
