[package]
name = "dcb-exe"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-util = { path = "../dcb-util" }

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
ascii = { version = "1.0.0", features = ["serde"] }
int-conv = "0.1.4"
bitmatch = "0.1.1"
snailquote = "0.3.0"
auto_enums = "0.7.12"
itertools = "0.10.0"

# Serde
serde = { version = "1.0.120", features = ["derive"] }
serde_yaml = "0.8.15"

# Derives
derive_more = "0.99.11"
thiserror = "1.0.23"
