[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-exe"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "8c9cb2d", features = ["use_serde"]}

# Log
log = "0.4.13"

# Util
ascii = {version = "1.0.0", features = ["serde"]}
auto_enums = "0.7.12"
bitmatch = "0.1.1"
byteorder = "1.4.2"
int-conv = "0.1.4"
itertools = "0.10.0"
snailquote = "0.3.0"

# Serde
serde = {version = "1.0.120", features = ["derive"]}
serde_yaml = "0.8.15"

# Derives
derive_more = "0.99.11"
thiserror = "1.0.23"
