[package]
name = "dcb-io"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-util = { path = "../dcb-util" }
dcb-iso9660 = { path = "../dcb-iso9660" }
dcb-cdrom-xa = { path = "../dcb-cdrom-xa" }

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
chrono = "0.4.19"

# Derives
thiserror = "1.0.23"
