[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-iso9660"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
dcb-cdrom-xa = {path = "../dcb-cdrom-xa"}
zutil = {git = "https://github.com/Zenithsiz/zutil"}

# Log
log = "0.4.13"

# Util
bitflags = "1.2.1"
byteorder = "1.4.2"

# Derives
extend = "1.0.1"
ref-cast = "1.0.6"
thiserror = "1.0.23"
