[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-msd"
version = "0.1.0"

[dependencies]

# Logging
log = "0.4.13"

# Error handling
thiserror = "1.0.26"

# Utility
byteorder = "1.4.3"
dbg_hex = {git = "https://github.com/Zenithsiz/dbg_hex"}
derive_more = "0.99.16"
itertools = "0.10.0"
#zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "8c9cb2d"}
zutil = {path = "../../zutil"}

# Strings
encoding_rs = "0.8.28"

# Serde
serde = "1.0.127"
