[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-pak"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../dcb-bytes"}
#zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "8c9cb2d"}
zutil = {path = "../../zutil"}

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"

# Derives
thiserror = "1.0.23"
