[package]
name = "dcb-tim"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-util = { path = "../dcb-util" }

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
bitmatch = "0.1.1"
int-conv = "0.1.4"
derive_more = "0.99.14"

# Derives
thiserror = "1.0.23"
