[package]
name = "dcb-tools"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[[bin]]
name = "extractor"
path = "src/extractor/main.rs"

[[bin]]
name = "patcher"
path = "src/patcher/main.rs"

[dependencies]
# Dcb
dcb = { path = "../dcb" }

# Text
ascii = "1.0"

# Helpers
float-ord = "0.2"
itertools = "0.9"
rand = "0.7"

# Cmd
clap = "2.33"

# Logging
log = "0.4"
simplelog = "0.7"

# Error handling
string-err    = "0.1"
err-backtrace = { path = "../err-backtrace" }
err-panic     = { path = "../err-panic", features = ["string-err-ext"] }
err-ext       = { path = "../err-ext" }
err-impl      = { git = "https://github.com/Zenithsiz/err-impl" }

# Derives
derive_more   = "0.99"
smart-default = "0.6"

# Serde
serde = "1.0"
serde_yaml = "0.8"

# Build dependencies in release mode
[profile.dev.package."*"]
opt-level = 2
[profile.dev.package.dcb] # Except dcb for debugging
opt-level = 0
