[package]
name = "dcb-tools"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[[bin]]
name = "extractor"
path = "src/extractor/main.rs"

[[bin]]
name = "patcher"
path = "src/patcher/main.rs"

[[bin]]
name = "decompiler"
path = "src/decompiler/main.rs"

[dependencies]
# Dcb
dcb = { path = "../dcb" }

# Text
ascii = "1.0"

# Helpers
int-conv = "0.1"
byteorder = "1.3"
float-ord = "0.2"
itertools = "0.9"
rand = "0.7"
ref-cast = "1.0"

# Cmd
clap = "2.33"

# Logging
log = "0.4"
simplelog = "0.8"

# Error handling
anyhow = "1.0"

# Derives
derive_more   = "0.99"
smart-default = "0.6"

# Serde
serde = "1.0"
serde_yaml = "0.8"
