[package]
name = "dcb-util"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }

# Util
arrayref = "0.3.6"
ascii = { version = "1.0.0", features = ["serde"] }
int-conv = "0.1.4"
either = "1.6.1"
sealed = "0.2.1"
derive_more = "0.99.14"

# Serde
serde = { version = "1.0.120", features = ["derive"] }

# Derives
thiserror = "1.0.23"
ref-cast = "1.0.6"

# Thread
rayon = "1.5.1"
futures = "0.3.15"
thread_local = "1.1.3"

# Logging
log = "0.4.14"

# Gui
eframe = { git = "https://github.com/emilk/egui", optional = true }

[features]
gui = ["eframe"]