[package]
name = "dcb"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { version = "0.1", path = "../dcb-bytes" }

# Log
log = "0.4"

# Util
byteorder = "1.3"
ascii     = { version = "1.0", features = ["serde"] }
arrayref  = "0.3"
contracts = "0.6"

# Serde
serde = { version = "1.0", features = ["derive"] }

# Derives
derive_more = "0.99"
thiserror = "1.0"

[dev-dependencies]

itertools = "0.9"
