[package]
name = "dcb"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Dcb
dcb-bytes = { path = "../dcb-bytes" }
dcb-util = { path = "../dcb-util" }
dcb-io = { path = "../dcb-io" }
dcb-bytes-derive = { path = "../dcb-bytes-derive" }

# Log
log = "0.4.13"

# Util
byteorder = "1.4.2"
ascii = { version = "1.0.0", features = ["serde"] }

# Serde
serde = { version = "1.0.120", features = ["derive"] }

# Derives
derive_more = "0.99.11"
thiserror = "1.0.23"
ref-cast = "1.0.6"
strum = { version = "0.20.0", features = ["derive"] }