[package]
name = "dcb-card-editor"
version = "0.1.4"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]
# Dcb
dcb = { path = "../../dcb" }
dcb-bytes = { path = "../../dcb-bytes" }
dcb-util = { path = "../../dcb-util", features = ["gui", "alert"] }
dcb-cdrom-xa = { path = "../../dcb-cdrom-xa" }
dcb-tim = { path = "../../dcb-tim" }
dcb-io = { path = "../../dcb-io" }

# Gui
eframe = { git = "https://github.com/emilk/egui" }

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Utils
native-dialog = "0.5.5"
either = "1.6.1"
ref-cast = "1.0.6"
derive_more = "0.99.13"
strum = { version = "0.20.0", features = ["derive"] }
size_format = "1.0.2"

# Serde
serde_yaml = "0.8.17"