[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-deck-editor"
version = "0.1.1"

[dependencies]
# Dcb
dcb = {path = "../../dcb"}
dcb-bytes = {path = "../../dcb-bytes"}
dcb-cdrom-xa = {path = "../../dcb-cdrom-xa"}

# Gui
eframe = {git = "https://github.com/emilk/egui", rev = "7c5a2d60"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Utils
derive_more = "0.99.13"
either = "1.6.1"
native-dialog = "0.5.5"
ref-cast = "1.0.6"
strum = {version = "0.20.0", features = ["derive"]}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "8c9cb2d", features = ["gui"]}

# Serde
serde_json = "1.0.66"
serde_yaml = "0.8.17"
