[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-disasm"
version = "0.1.0"

[dependencies]
# Dcb
dcb = {path = "../../dcb"}
dcb-exe = {path = "../../dcb-exe"}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "fd560358d75f7ddb43524879cf0bf017bc6dfeda"}

# Text
ascii = "1.0"

# Helpers
byteorder = "1.3"
int-conv = "0.1"
itertools = "0.10.0"

# Cmd
clap = "2.33"

# Logging
log = "0.4"
simplelog = "0.8"

# Error handling
anyhow = "1.0"

# Derives
derive_more = "0.99"

# Serde
serde = "1.0"
serde_yaml = "0.8"
