[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-drv-fuse"
version = "0.1.0"

[dependencies]

# Dcb
dcb-bytes = {path = "../../dcb-bytes"}
dcb-drv = {path = "../../dcb-drv"}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "fd560358d75f7ddb43524879cf0bf017bc6dfeda"}

# Fuse
fuser = "0.8.0"
libc = "0.2.98"

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"
thiserror = "1.0.23"

# Util
ascii = "1.0.0"
bit-vec = "0.6.3"
byteorder = "1.4.2"
chrono = "0.4.19"
itertools = "0.10.1"
ref-cast = "1.0.6"
