[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-extract-card-table"
version = "0.1.5"

[dependencies]
# Dcb
dcb = {path = "../../dcb"}
dcb-bytes = {path = "../../dcb-bytes"}
dcb-cdrom-xa = {path = "../../dcb-cdrom-xa"}
dcb-io = {path = "../../dcb-io"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Cmd
clap = "2.33.3"

# Serde
serde_json = "1.0.66"
