[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-file-editor"
version = "0.1.1"

[dependencies]
# Dcb
dcb-bytes = {path = "../../dcb-bytes"}
dcb-cdrom-xa = {path = "../../dcb-cdrom-xa"}
dcb-drv = {path = "../../dcb-drv"}
dcb-io = {path = "../../dcb-io"}
dcb-iso9660 = {path = "../../dcb-iso9660"}
dcb-pak = {path = "../../dcb-pak"}
dcb-tim = {path = "../../dcb-tim"}

# Gui
eframe = {git = "https://github.com/emilk/egui"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error
anyhow = "1.0.40"

# Utils
byteorder = "1.4.3"
chrono = "0.4.19"
derive_more = "0.99.13"
either = "1.6.1"
native-dialog = "0.5.5"
ref-cast = "1.0.6"
strum = {version = "0.20.0", features = ["derive"]}
zutil = {git = "https://github.com/Zenithsiz/zutil", features = ["alert", "use_futures"]}

# Serde
serde_yaml = "0.8.17"
