[package]
name = "dcb-undrv"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]
# Dcb
dcb-util = { path = "../../dcb-util" }
dcb-drv = { path = "../../dcb-drv" }

# Util
filetime = "0.2.14"
size_format = "1.0.2"

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.14"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"
