[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unmsd"
version = "0.1.0"

[dependencies]
# Dcb
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "8c9cb2d"}

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"

# Utility
byteorder = "1.4.3"
itertools = "0.10.0"

# Strings
encoding_rs = "0.8.28"

# Serde
serde_yaml = "0.8.17"
