[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unmsd"
version = "0.1.0"

[dependencies]
# Dcb
dcb-bytes = {path = "../../dcb-bytes"}
dcb-msd = {path = "../../dcb-msd"}

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"

# Utility
byteorder = "1.4.3"
dbg_hex = {git = "https://github.com/Zenithsiz/dbg_hex"}
itertools = "0.10.0"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "fd560358d75f7ddb43524879cf0bf017bc6dfeda"}

# Strings
encoding_rs = "0.8.28"

# Serde
serde_yaml = "0.8.17"
