[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-unpak"
version = "0.1.0"

[dependencies]
# Dcb
dcb-pak = {path = "../../dcb-pak"}
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "896cf73ac7ca2551a1d0fad2fb2eb7d98941d00a"}

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"

# Util
size_format = "1.0.2"
