[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-untmd"
version = "0.1.0"

[dependencies]
# Dcb
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "fd560358d75f7ddb43524879cf0bf017bc6dfeda"}

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"

# Util
byteorder = "1.4.2"
size_format = "1.0.2"

# Math
cgmath = "0.18.0"
