[package]
name = "model-set-extractor"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]
# Dcb
dcb-pak = { path = "../../dcb-pak" }
dcb-util = { path = "../../dcb-util" }

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"
