[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "dcb-mkbin"
version = "0.1.0"

[dependencies]

# Dcb
dcb-cdrom-xa = {path = "../../../dcb-cdrom-xa"}

# Cmd
clap = "2.33.3"

# Logging
log = "0.4.13"
simplelog = "0.9.0"

# Error handling
anyhow = "1.0.38"
